--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17856,6 +17856,45 @@
 "~^/RTX.*$" "/rtx";
 "~^/.*[Rr]esiniferatoxin.*$" "/rtx";
 "~^/doc/statistics/bias/2024-cobb.pdf.*$" "/doc/statistics/bias/2023-cobb.pdf";
+"~^/doc/sr/2008-gov.u$" "/doc/darknet-market/2008-gov.uscourts.txnd.174855.2.0-castlemanaffidavit.pdf";
+"~^/danbooru2021Danbooru2021.*$" "/danbooru2021";
+"~^/Suzanne-Delage/.*$" "/suzanne-delage";
+"~^/metadata/auto.gtx-bak$" "/metadata/auto.gtx";
+"~^/doc/technology/2004-03-30-shirky$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
+"~^/doc/rotten.com/library/romans/$" "/doc/rotten.com/library/bio/royalty/romans/index.html";
+"~^/doc/rotten.com/library/bio/crime/mafia/Albert_Anastasia/index$" "/doc/rotten.com/library/bio/crime/mafia/albert-anastasia/index.html";
+"~^/doc/rotten.com/library/artists/$" "/doc/rotten.com/library/bio/artists/index.html";
+"~^/doc/psychology/personality/conscientiousne...rn\.pdf.*$" "/doc/psychology/personality/conscientiousness/2008-kern.pdf";
+"~^/doc/psychology/music/distraction/1999-furnham-2.pdf\.\-.*$" "/doc/psychology/music/distraction/1999-furnham-2.pdf";
+"~^/.*/Life-contract$" "/life-contract";
+"~^/.*/EA-donations$" "/ea-donations";
+"~^/doc/economics/%C3%8.*$" "/doc/economics/index";
+"~^/doc/economics/advertising/2000-1$" "/doc/economics/advertising/2000-bayles-justhowblindarewetoadvertisingbannersontheweb.html";
+"~^/doc/darknet-market/2013-05-05-moore-bitcoinexchangesurvivalanalysis.r.html$" "/doc/darknet-market/2013-05-05-moore-bitcoinexchangesurvivalanalysis.R.html";
+"~^/doc/borges/1947-borges-anewrefutationoftime.pdf\..*$" "/doc/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/doc/ai/1996-rej-ai\.pdf.*$" "/doc/ai/index";
+"~^/doc/ai/1962BR.*$" "/doc/ai/1962-bryson.pdf";
+"~^/tolerability/abt_lichter.html$" "/doc/biology/2000-iapac-norvir/abt_lichter.html";
+"~^/tolerability/shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/tolerability/temperature/abt_lichter_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_lichter_temp1.html";
+"~^/tolerability/temperature/abt_sum_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_sum_temp1.html";
+"~^/tolerability/temperature/farthingtemp.html$" "/doc/biology/2000-iapac-norvir/temperature/farthingtemp.html";
+"~^/tolerability/temperature/sun.html$" "/doc/biology/2000-iapac-norvir/temperature/sun.html";
+"~^/tolerability/tolerability/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/tolerability/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/Water/.*$" "/water";
+"~^/doc/darknet/2019-04-22-deepdotweb-dnmlist.html$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/src/pickard/index$" "/doc/darknet-markets/william-pickard/index";
+"~^/doc/history/%C3%B0$" "/doc/history/index";
+"~^/doc/361$" "/doc/index";
+"~^/doc/nootropics/2010-45$" "/doc/nootropic/2010-finke.pdf";
+"~^/doc/personal/2011-214$" "/doc/personal/index";
+"~^/doc/psychology/okcupid/raceandattra$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/psychology/personality/con$" "/doc/psychology/personality/conscientiousness/index";
+"~^/Fake-j$" "/fake-journal-club";
+"~^/Magnesium.md$" "/nootropics/magnesium.md";
+"~^/economics$" "/doc/economics/index";
+"~^/TxW9$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
@@ -19355,7 +19394,6 @@
 "~^/destek.*$" "/static/404";
 "~^/detail/.*$" "/static/404";
 "~^/detroitchicago/.*$" "/static/404";
-"~^/dev.*$" "/static/404";
 "~^/dev/.*$" "/static/404";
 "~^/devel/https.*$" "/static/404";
 "~^/dfgkjg.*$" "/static/404";
@@ -23809,6 +23847,17 @@
 "~^/doc/personal/horoskopy.*$" "/static/404";
 "~^/zb_users/.*$" "/static/404";
 "~^/zb_system/.*$" "/static/404";
+"~^/ap/.*$" "/static/404";
+"~^/xf/.*$" "/static/404";
+"~^/TxW9.*$" "/static/404";
+"~^/.*private.pem.*$" "/static/404";
+"~^/LqMS.*$" "/static/404";
+"~^/%E3%83%93%E3%83%A7%E3%82%A6/.*$" "/static/404";
+"~^/ceria123.*$" "/static/404";
+"~^//apps/.*$" "/static/404";
+"~^/ap/.*$" "/static/404";
+"~^/2.8-MB.*$" "/static/404";
+"~^/01_m7.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
