--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -6973,7 +6973,7 @@
 "~^/GPT-3Eg.*$" "/GPT-3";
 "~^/Ai-writing.*$" "/gPT-3";
 "~^/GPT-3Mathlinks$" "/gPT-3#bpes";
-"~^/GPT-3\*dr.*$" "/gPT-3#dr-seuss-oh-the-places-youll-go";
+"~^/GPT-3\*dr.*$" "/gpt-3#dr-seuss-oh-the-places-youll-go";
 "~^/gpt3-non$" "/gPT-3-nonfiction";
 "~^/GPT-3/movies$" "/gPT-3-nonfiction#moviebook-plot-summaries";
 "~^/GPT-3paul-graham$" "/gPT-3-nonfiction#paul-graham";
@@ -17854,7 +17854,7 @@
 "~^/darkmode.js$" "/static/js/dark-mode.js";
 "~^/zeo/0$" "/zeo/index";
 "~^/RTX.*$" "/rtx";
-"~^/.*[Rr]esiniferatoxin.*$" "/rtx";
+"~^/.*resiniferatoxin.*$" "/rtx";
 "~^/doc/statistics/bias/2024-cobb.pdf.*$" "/doc/statistics/bias/2023-cobb.pdf";
 "~^/doc/sr/2008-gov.u$" "/doc/darknet-market/2008-gov.uscourts.txnd.174855.2.0-castlemanaffidavit.pdf";
 "~^/danbooru2021Danbooru2021.*$" "/danbooru2021";
@@ -17895,6 +17895,81 @@
 "~^/Magnesium.md$" "/nootropics/magnesium.md";
 "~^/economics$" "/doc/economics/index";
 "~^/TxW9$" "/static/404";
+"~^/doc/tolerability/links.html$" "/doc/biology/2000-iapac-norvir/links.html";
+"~^/doc/tolerability/physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/doc/tolerability/search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/doc/tolerability/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/nootropic/quantified-self/2018-05-17$" "/doc/nootropic/quantified-self/2018-05-17-gwern-bacopa.csv";
+"~^/GPT-3Order$" "/gpt-3#dr-seuss-oh-the-places-youll-go";
+"~^/doc/dual-n-back/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/psychiatry/schizophrenia/rosenhan/2023-schull\.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/2023-scull.pdf";
+"~^/doc/politics/2007-thiel.pdffav.*$" "/doc/politics/2007-thiel.pdf";
+"~^/turing-complete%EF%BC%89.*$" "/turing-complete";
+"~^/static/build/interwiki.hs$" "/static/build/Interwiki.hs";
+"~^/static/build/Annotation/%5C.*$" "/static/build/Annotation/";
+"~^/note/Regression/index$" "/note/regression";
+"~^/note/Attention.*$" "/note/attention";
+"~^/index%E2%80%A8.*$" "/index";
+"~^/doc/psychology/personality/conscientiousness/1998-mount.pdf%29%E7%9A%84.*$" "/doc/psychology/personality/conscientiousness/1998-mount.pdf";
+"~^/doc/psychology/personality/conscientiousness/1996-costa.pdf%29%E4%B8.*$" "/doc/psychology/personality/conscientiousness/1996-costa.pdf";
+"~^/doc/psychology/music/distraction/2014-miller.pd%5Cf$" "";
+"~^/doc/psychology/music/distraction/1989-salame.pdf.-.*$" "/doc/psychology/music/distraction/1989-salame.pdf";
+"~^/doc/psychology/1950/aG9.*$" "/doc/psychology/1950-stouffer-theamericansoldier-v4-measurementandprediction.pdf";
+"~^/doc/psychiatry/depression/2023-gray$" "/doc/psychiatry/depression/2023-gray.pdf";
+"~^/doc/politics/2007-t$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/politics/2007-thi$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/politics/2007-thiel.pd%5C.*$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/politics/2007-thiel$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/politics/2007-thie$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/politics/2007-th$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/.*/image-of-Fig.*$" "/static/404";
+"~^/doc/longevity/2019-decabo.pdf%E2%80%AC.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/iq/ses/1997-gottfredson.pdf%29.*$" "/doc/iq/ses/1997-gottfredson.pdf";
+"~^/doc/cs/algorithm/2008-changizi.pdf[a-z].*$" "/doc/cs/algorithm/2008-changizi.pdf";
+"~^/doc/bX.*$" "/doc/index";
+"~^/doc/anime/1997-utenaK.*$" "/doc/anime/1997-utena";
+"~^/bannner\?source=.*$" "";
+"~^/complexity-no-bar$" "/complexity";
+"~^/tolerability/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/tolerability/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/doc/biology/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/tolerability/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/cat/psychology/drug/erva-de-gato/1962-todd\.pdf.*$" "/doc/cat/psychology/drug/catnip/1962-todd.pdf";
+"~^/doc/pol$" "/doc/politics/index";
+"~^/doc/cs/2012-terencetao-anonymity$" "/doc/cs/security/2012-terencetao-anonymity.html";
+"~^/doc/2013-laham\.pdf.*$" "/doc/culture/2013-laham.pdf";
+"~^/doc/2012-takeuchi\.pdf.*$" "/doc/dual-n-back/2012-takeuchi.pdf";
+"~^/doc/fiction/science-fiction/1992-jordan$" "/doc/fiction/science-fiction/1992-jordan.pdf";
+"~^/doc/genetics/1930-stocks\.pdf.*$" "/doc/genetics/heritable/1930-stocks.pdf";
+"~^/doc/2002-degenhardt\.pdf.*$" "/doc/genetics/heritable/correlation/2002-degenhardt.pdf";
+"~^/doc/melatonin/1998-lewy$" "/doc/melatonin/1998-lewy.pdf";
+"~^/doc/1991-bittoun\.pdf.*$" "/doc/nicotine/1991-bittoun.pdf";
+"~^/doc/1997-sandborn\.pdf.*$" "/doc/nicotine/1997-sandborn.pdf";
+"~^/doc/2002-dar\.pdf.*$" "/doc/nicotine/2002-dar.pdf";
+"~^/doc/2003-fowler\.pdf.*$" "/doc/nicotine/2003-fowler.pdf";
+"~^/doc/2003-liu\.pdf.*$" "/doc/nicotine/2003-liu.pdf";
+"~^/doc/2006-kahlil\.pdf.*$" "/doc/nicotine/2006-kahlil.pdf";
+"~^/doc/2012-galitovskiy\.pdf.*$" "/doc/nicotine/2012-galitovskiy.pdf";
+"~^/doc/politi$" "/doc/politics/index";
+"~^/doc/polit$" "/doc/politics/index";
+"~^/doc/psychology/2006-02-%EF%BF%BD.*$" "/doc/psychiatry/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger.html";
+"~^/doc/psychology/2020-bellet.pd\f$" "/doc/psychology/2020-bellet.pdf";
+"~^/doc/po$" "/doc/psychology/index";
+"~^/doc/2013-meyer\.pdf.*$" "/doc/psychology/spaced-repetition/2013-meyer.pdf";
+"~^/doc/1985-skogan-appendices\.pdf.*$" "/doc/sociology/1985-skogan-appendices.pdf";
+"~^/doc/poli$" "/doc/politics/index";
+"~^/doc/1989-konold\.pdf.*$" "/doc/statistics/bias/1989-konold.pdf";
+"~^/doc/2002-jennions\.pdf.*$" "/doc/statistics/bias/2002-jennions.pdf";
+"~^/doc/dnb/2006-peters\.pdf.*$" "/doc/statistics/bias/animal/2006-peters.pdf";
+"~^/doc/technology/2018-1$" "/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html";
+"~^/on-writing$" "/doc/psychology/writing";
+"~^/,Gwern$" "/index";
+"~^/sicp/Chapter-0$" "/sicp/chapter-1-1";
+"~^/sicp/1-4$" "/sicp/index";
+"~^/silk-road-1$" "/silk-road";
+"~^/static/build/Util.hs$" "/static/build/Utils.hs";
+"~^/static/build/util.hs$" "/static/build/Utils.hs";
+"~^/doc/longevity/glp/tirzepatide/favicon.ico$" "/static/img/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
@@ -23858,6 +23933,14 @@
 "~^/ap/.*$" "/static/404";
 "~^/2.8-MB.*$" "/static/404";
 "~^/01_m7.*$" "/static/404";
+"~^/.*php_info.*$" "/static/404";
+"~^/.*/nopic.png.*$" "/static/404";
+"~^/.*/style/Urban/img/logo_8.png.*$" "/static/404";
+"~^/.*CMS.gz.*$" "/static/404";
+"~^/.*auth\.json.*$" "/static/404";
+"~^/.*/caiji/update.php?name=admin.*$" "/static/404";
+"~^/.*addons/.*$" "/static/404";
+"~^/.*/update.php.*name=admin.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
