--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17854,7 +17854,7 @@
 "~^/darkmode.js$" "/static/js/dark-mode.js";
 "~^/zeo/0$" "/zeo/index";
 "~^/RTX.*$" "/rtx";
-"~^/.*resiniferatoxin.*$" "/rtx";
+"~^/resiniferatoxin.*$" "/rtx";
 "~^/doc/statistics/bias/2024-cobb.pdf.*$" "/doc/statistics/bias/2023-cobb.pdf";
 "~^/doc/sr/2008-gov.u$" "/doc/darknet-market/2008-gov.uscourts.txnd.174855.2.0-castlemanaffidavit.pdf";
 "~^/danbooru2021Danbooru2021.*$" "/danbooru2021";
@@ -17970,8 +17970,40 @@
 "~^/static/build/Util.hs$" "/static/build/Utils.hs";
 "~^/static/build/util.hs$" "/static/build/Utils.hs";
 "~^/doc/longevity/glp/tirzepatide/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/rotten.com/conspiracy/$" "/doc/rotten.com/library/conspiracy/index.html";
+"~^/doc/Mb.*$" "/doc/index";
+"~^/note/FC/.*$" "/note/fc";
+"~^/doc/spaced-repetition-forgetting-curve-stahl.jpg$" "/doc/psychology/spaced-repetition/forgetting-curve-stahl.jpg";
+"~^/doc/sociology/2003-murray-humanaccomplishment.pdfwww.*$" "/doc/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/doc/psychology/willpower/\&sol.*$" "/doc/psychology/willpower/index";
+"~^/doc/psychology/psychology/okcupid/index$" "/doc/psychology/okcupid/index";
+"~^/doc/psy....chology/okcupid/your$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/doc/politics/2007-thiel.pdf%C2%A0.*$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/nootropic/quantified-self/2018-05-17-%C3%B0.*$" "/doc/nootropic/bacopa/2018-05-17-gwern-bacopa.csv";
+"~^/doc/music/music-distraction$" "/doc/psychology/music/distraction/index";
+"~^/doc/ai/1962-bryson$" "/doc/ai/1962-bryson.pdf";
+"~^/Console-Insurance/.*$" "/console-insurance";
+"~^/co$" "/console-insurance";
+"~^/DeathNoteAnonymity$" "/death-note-anonymity";
+"~^/black$" "/dnm-arrests";
+"~^/doc/anime/eva/2012-takeda-notenkimemoirs$" "/doc/anime/eva/notenki-memoirs/2002-takeda-notenkimemoirs";
+"~^/doc/7.*-nakamoto$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/iq/1920thorndike\.pdf.*$" "/doc/iq/1920-thorndike-2.pdf";
+"~^/doc/iq/1927-spe$" "/doc/iq/1927-spearman-theabilitiesofman.pdf";
+"~^/doc/nootropic/quantified-self/2014-08-08-1$" "/doc/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis.csv";
+"~^/doc/radiance/index_split_022.html$" "/doc/radiance/index";
+"~^/[Nn]otes?/ws.*$" "/note/index";
+"~^/sidenotes.md$" "/sidenote.md";
+"~^/nootropic/zeo/Vitamin-D$" "/zeo/vitamin-d";
+"~^/doc/cat/psychology/2005-bernstein$" "/doc/cat/psychology/2005-bernstein.pdf";
+"~^/doc/2013-ngram-sandstoneoilskinlinoleum.png$" "/doc/statistics/2013-gwern-ngram-sandstoneoilskinlinoleum.png";
+"~^/doc/radiance/index_split_002.html$" "/doc/radiance/index";
+"~^/newsletter/static/font/SourceSerifPro-BASIC-Regular.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Regular.ttf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
+"~^/testing-put.*$" "/static/404";
+"~^/seiPhone-screen.*$" "/static/404";
+"~^/room/.*$" "/static/404";
 "~^/.*/mraid.js$" "/static/404";
 "~^/2EF8E3DF.*$" "/static/404";
 "~^/.*mailto:.*$" "/static/404";
