--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11494,3 +11494,6 @@ default "";
 "~^/doc/darknet-market/2020-sutanrikulu.pdf.*$" "/doc/darknet-market/dnm-archive/2020-sutanrikulu.pdf";
 "~^/doc/darknet-market/2020-norbutas.pdf.*$" "/doc/darknet-market/dnm-archive/2020-norbutas.pdf";
 "~^/doc/darknet-market/2020-ladegaard.pdf.*$" "/doc/darknet-market/silk-road/1/2020-ladegaard.pdf";
+"~^/doc/darknet-market/2017-hull.pdf.*$" "/doc/darknet-market/dnm-archive/2017-hull.pdf";
+"~^/doc/algernon/2010-cook.pdf.*$" "/doc/algernon/2010-cook-2.pdf";
+"~^/doc/psychology/2018-watts.pdf.*$" "/doc/psychology/willpower/2018-watts.pdf";
