--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -617,6 +617,18 @@ server {
         rewrite ^/wholesomeanimemes/(?<original>.*)$ https://old.reddit.com/r/wholesomeanimemes/$original permanent;
         rewrite ^/wikipedia/(?<original>.*)$ https://old.reddit.com/r/wikipedia/$original permanent;
         rewrite ^/conspiracy/(?<original>.*)$ https://old.reddit.com/r/conspiracy/$original permanent;
+        rewrite ^/deepdream/(?<original>.*)$ https://old.reddit.com/r/deepdream/$original permanent;
+        rewrite ^/StableDiffusion/(?<original>.*)$ https://old.reddit.com/r/StableDiffusion/$original permanent;
+        rewrite ^/typography/(?<original>.*)$ https://old.reddit.com/r/typography/$original permanent;
+        rewrite ^/bigsleep/(?<original>.*)$ https://old.reddit.com/r/bigsleep/$original permanent;
+        rewrite ^/CrappyDesign/(?<original>.*)$ https://old.reddit.com/r/CrappyDesign/$original permanent;
+        rewrite ^/DiscoDiffusion/(?<original>.*)$ https://old.reddit.com/r/DiscoDiffusion/$original permanent;
+        rewrite ^/HentaiDiffusion/(?<original>.*)$ https://old.reddit.com/r/HentaiDiffusion/$original permanent;
+        rewrite ^/Lettering/(?<original>.*)$ https://old.reddit.com/r/Lettering/$original permanent;
+        rewrite ^/Openaijukebox/(?<original>.*)$ https://old.reddit.com/r/Openaijukebox/$original permanent;
+        rewrite ^/Inktober/(?<original>.*)$ https://old.reddit.com/r/Inktober/$original permanent;
+        rewrite ^/Illustration/(?<original>.*)$ https://old.reddit.com/r/Illustration/$original permanent;
+        rewrite ^/logodesign/(?<original>.*)$ https://old.reddit.com/r/logodesign/$original permanent;
 
         rewrite ^/(?<original>.*/dp/B.*)$ https://amazon.com/$original permanent; # eg. '/Miracle-Philadelphia-Constitutional-Convention-September/dp/B0007ELQH0'
         rewrite ^/(?<original>doc/www/.*)\.pdf%23(?<anchor>[a-z0-9=]+)$ /$original.pdf\#$anchor permanent;
