--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11497,3 +11497,7 @@ default "";
 "~^/doc/darknet-market/2017-hull.pdf.*$" "/doc/darknet-market/dnm-archive/2017-hull.pdf";
 "~^/doc/algernon/2010-cook.pdf.*$" "/doc/algernon/2010-cook-2.pdf";
 "~^/doc/psychology/2018-watts.pdf.*$" "/doc/psychology/willpower/2018-watts.pdf";
+"~^/doc/darknet-market/2020-jeziorowski.pdf.*$" "/doc/darknet-market/dnm-archive/2020-jeziorowski.pdf";
+"~^/doc/cs/computable/2008-neary-figure111-spacetimetradeoffinminimalturingmachines.png.*$" "/doc/cs/computable/2008-neary-figure111-spacetimetradeoffinminimalturingmachines.jpg";
+"~^/doc/iq/2006-grabner.pdf.*$" "/doc/iq/high/2006-grabner.pdf";
+"~^/doc/darknet-market/2020-jeziorowski-2.pdf.*$" "/doc/darknet-market/dnm-archive/2020-jeziorowski-2.pdf";
