--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18020,6 +18020,10 @@
 "~^/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdfI.*$" "/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdf";
 "~^/stop$" "/slowing-moores-law";
 "~^/sunk-costs$" "/sunk-cost";
+"~^/doc/technology/google/J.*$" "/doc/technology/google/index";
+"~^/doc/fiction/humor/hardtruthsfromsoftcats.tumblr.com/2015-09-21-tumblr_nv1h4fvr3t1re0dy6o1_640.jpg$" "/doc/fiction/humor/hardtruthsfromsoftcats.tumblr.com/2015-09-21-tumblr_nv1h4fvr3t1re0dy6o1_640.png";
+"~^/doc/nootropic/quantified-self/2014-08-08$" "/doc/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis.csv";
+"~^/[Ll]i$" "/lithium";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
