--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11501,3 +11501,4 @@ default "";
 "~^/doc/cs/computable/2008-neary-figure111-spacetimetradeoffinminimalturingmachines.png.*$" "/doc/cs/computable/2008-neary-figure111-spacetimetradeoffinminimalturingmachines.jpg";
 "~^/doc/iq/2006-grabner.pdf.*$" "/doc/iq/high/2006-grabner.pdf";
 "~^/doc/darknet-market/2020-jeziorowski-2.pdf.*$" "/doc/darknet-market/dnm-archive/2020-jeziorowski-2.pdf";
+"~^/doc/darknet-market/2020-heistracher.pdf.*$" "/doc/darknet-market/dnm-archive/2020-heistracher.pdf";
