--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18024,6 +18024,35 @@
 "~^/doc/fiction/humor/hardtruthsfromsoftcats.tumblr.com/2015-09-21-tumblr_nv1h4fvr3t1re0dy6o1_640.jpg$" "/doc/fiction/humor/hardtruthsfromsoftcats.tumblr.com/2015-09-21-tumblr_nv1h4fvr3t1re0dy6o1_640.png";
 "~^/doc/nootropic/quantified-self/2014-08-08$" "/doc/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis.csv";
 "~^/[Ll]i$" "/lithium";
+"~^/Wikipedia-and-Knol\?.*" "/wikipedia-and-knol";
+"~^/fiction/The-Palace-of-Wonders.*$" "/fiction/the-palace-of-wonders";
+"~^/doc/statistics/decision/1957-bellman$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/doc/sociology/sex/2009-oktrends-raceattraction\.pdf.*$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/.*/Wikipedia-and-Dark-Side-Editing$" "/wikipedia-and-dark-side-editing";
+"~^/doc/iq-racialadmixture-poweranalysis-africanamericaneuropeanancestry-sdsimulations.png$" "/doc/iq/gwern-iq-racialadmixture-poweranalysis-africanamericaneuropeanancestry-sdsimulations.jpg";
+"~^/doc/genetics/cloning-sfdog-scenarios-profit.png$" "/doc/genetics/cloning/gwern-cloning-sfdog-scenarios-profit.jpg";
+"~^/doc/economics/1949-hoff-economiccalculationinthesocialistsociety.pdf1.*$" "/doc/economics/1949-hoff-economiccalculationinthesocialistsociety.pdf";
+"~^/doc/darknet-market/sheep-marketplace/M34.*$" "/doc/darknet-market/sheep-marketplace/index";
+"~^/doc/2019-12-21-gpt2-preferencelearning-abc-combinedmodel-divergence.png$" "/doc/ai/nn/transformer/gpt/2/2019-12-21-gwern-gpt2-preferencelearning-abc-combinedmodel-divergence.png";
+"~^/differences\?.*$" "/differences";
+"~^/.../1996-gendreau$" "";
+"~^/chang$" "/changelog";
+"~^/doc/ai/nn/gan/2020-05-22-caji9-deviantart-stylegan-ahegao.jpg$" "/doc/ai/nn/gan/2020-05-22-caji9-deviantart-stylegan-ahegao.png";
+"~^/doc/biggan$" "/doc/ai/nn/gan/biggan/index";
+"~^/doc/culture/2010-dobel$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/gene$" "/doc/genetics/index";
+"~^/selection/2018-schlebusch\.pdf.*$" "/doc/genetics/selection/2018-schlebusch.pdf";
+"~^/doc/genetics/heritable/2017-gazal\.pdf.*$" "/doc/genetics/selection/natural/human/2017-gazal.pdf";
+"~^/doc/iq/2007-za$" "/doc/iq/ses/2007-zagorsky.pdf";
+"~^/newsletter/133$" "/doc/newsletter/13";
+"~^/doc/psychology/okcupid/we$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/doc/technology/2004-%C3%B0$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
+"~^/doc/ai/anime/danbooru/www/escholarship.org/4d373cfadde93bed6067a25edaa0e9c5f9574c08\.pdf.*$" "/doc/www/escholarship.org/4d373cfadde93bed6067a25edaa0e9c5f9574c08.pdf";
+"~^/GPT-343$" "/gpt-3";
+"~^/toc$" "/index";
+"~^/index.Use$" "/index";
+"~^/review/mc$" "/review/mcnamara";
+"~^/static/img/ico--ns/arrow-right-thick.svg$" "/static/img/icons/arrow-right-thick.svg";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
@@ -24013,6 +24042,10 @@
 "~^/channel/.*$" "/static/404";
 "~^/xl/.*$" "/static/404";
 "~^/[aA]ction]/.*$" "/static/404";
+"~^/.*adminer.php.*$" "/static/404";
+"~^/resetpas.*$" "/static/404";
+"~^/mybdadmin/.*$" "/static/404";
+"~^/dg\.bet.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
