--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11502,3 +11502,6 @@ default "";
 "~^/doc/iq/2006-grabner.pdf.*$" "/doc/iq/high/2006-grabner.pdf";
 "~^/doc/darknet-market/2020-jeziorowski-2.pdf.*$" "/doc/darknet-market/dnm-archive/2020-jeziorowski-2.pdf";
 "~^/doc/darknet-market/2020-heistracher.pdf.*$" "/doc/darknet-market/dnm-archive/2020-heistracher.pdf";
+"~^/doc/darknet-market/2020-heistracher-2.pdf.*$" "/doc/darknet-market/dnm-archive/2020-heistracher-2.pdf";
+"~^/doc/ai/nn/gan/2020-05-22-caji9-deviantart-stylegan-ahegao.png.*$" "/doc/ai/nn/gan/stylegan/anime/2020-05-22-caji9-deviantart-stylegan-ahegao.png";
+"~^/doc/ai/nn/transformer/gpt/2019-12-21-gwern-gpt2-preferencelearning-abc-combinedmodel-divergence.png.*$" "/doc/ai/nn/transformer/gpt/2/2019-12-21-gwern-gpt2-preferencelearning-abc-combinedmodel-divergence.png";
