--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17912,7 +17912,7 @@
 "~^/index%E2%80%A8.*$" "/index";
 "~^/doc/psychology/personality/conscientiousness/1998-mount.pdf%29%E7%9A%84.*$" "/doc/psychology/personality/conscientiousness/1998-mount.pdf";
 "~^/doc/psychology/personality/conscientiousness/1996-costa.pdf%29%E4%B8.*$" "/doc/psychology/personality/conscientiousness/1996-costa.pdf";
-"~^/doc/psychology/music/distraction/2014-miller.pd%5Cf$" "";
+"~^/doc/psychology/music/distraction/2014-miller.pd%5Cf$" "/doc/psychology/music/distraction/2014-miller.pdf";
 "~^/doc/psychology/music/distraction/1989-salame.pdf.-.*$" "/doc/psychology/music/distraction/1989-salame.pdf";
 "~^/doc/psychology/1950/aG9.*$" "/doc/psychology/1950-stouffer-theamericansoldier-v4-measurementandprediction.pdf";
 "~^/doc/psychiatry/depression/2023-gray$" "/doc/psychiatry/depression/2023-gray.pdf";
@@ -17928,7 +17928,7 @@
 "~^/doc/cs/algorithm/2008-changizi.pdf[a-z].*$" "/doc/cs/algorithm/2008-changizi.pdf";
 "~^/doc/bX.*$" "/doc/index";
 "~^/doc/anime/1997-utenaK.*$" "/doc/anime/1997-utena";
-"~^/bannner\?source=.*$" "";
+"~^/bannner\?source=.*$" "/banner";
 "~^/complexity-no-bar$" "/complexity";
 "~^/tolerability/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
 "~^/tolerability/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
@@ -18035,7 +18035,7 @@
 "~^/doc/darknet-market/sheep-marketplace/M34.*$" "/doc/darknet-market/sheep-marketplace/index";
 "~^/doc/2019-12-21-gpt2-preferencelearning-abc-combinedmodel-divergence.png$" "/doc/ai/nn/transformer/gpt/2/2019-12-21-gwern-gpt2-preferencelearning-abc-combinedmodel-divergence.png";
 "~^/differences\?.*$" "/differences";
-"~^/.../1996-gendreau$" "";
+"~^/.../1996-gendreau$" "/doc/iq/1996-gendreau.pdf";
 "~^/chang$" "/changelog";
 "~^/doc/ai/nn/gan/2020-05-22-caji9-deviantart-stylegan-ahegao.jpg$" "/doc/ai/nn/gan/2020-05-22-caji9-deviantart-stylegan-ahegao.png";
 "~^/doc/biggan$" "/doc/ai/nn/gan/biggan/index";
