--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11505,3 +11505,8 @@ default "";
 "~^/doc/darknet-market/2020-heistracher-2.pdf.*$" "/doc/darknet-market/dnm-archive/2020-heistracher-2.pdf";
 "~^/doc/ai/nn/gan/2020-05-22-caji9-deviantart-stylegan-ahegao.png.*$" "/doc/ai/nn/gan/stylegan/anime/2020-05-22-caji9-deviantart-stylegan-ahegao.png";
 "~^/doc/ai/nn/transformer/gpt/2019-12-21-gwern-gpt2-preferencelearning-abc-combinedmodel-divergence.png.*$" "/doc/ai/nn/transformer/gpt/2/2019-12-21-gwern-gpt2-preferencelearning-abc-combinedmodel-divergence.png";
+"~^/doc/darknet-market/2019-zhang-3.pdf.*$" "/doc/darknet-market/dnm-archive/2019-zhang-3.pdf";
+"~^/doc/darknet-market/2019-mittal.pdf.*$" "/doc/darknet-market/dnm-archive/2019-mittal.pdf";
+"~^/doc/darknet-market/2019-miller.pdf.*$" "/doc/darknet-market/dnm-archive/2019-miller.pdf";
+"~^/doc/darknet-market/2019-du.pdf.*$" "/doc/darknet-market/alphabay/2019-du.pdf";
+"~^/doc/darknet-market/2019-berman.pdf.*$" "/doc/darknet-market/silk-road/2/2019-berman.pdf";
