--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18053,6 +18053,15 @@
 "~^/index.Use$" "/index";
 "~^/review/mc$" "/review/mcnamara";
 "~^/static/img/ico--ns/arrow-right-thick.svg$" "/static/img/icons/arrow-right-thick.svg";
+"~^/ide$" "/idea";
+"~^/noots$" "/nootropics/nootropics";
+"~^/Book-writings?$" "/book-writing";
+"~^/Book-Writings?$" "/book-writing";
+"~^/book-Writings?$" "/book-writing";
+"~^/[Ww]riting-[Bb]ooks?$" "/book-writing";
+"~^/[Oo]ne$" "/oen";
+"~^/[Oo]eis$" "/oen";
+"~^/Oen$" "/oen";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
